--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:fdb2247b85a0e6c1f60d98cfcc9c6e57549561c8c31ac34cbd338e3fdea4be7f"
+  "signature": "sha256:4068e1de6abbe3627dfd0aa737ba84d1c236864e7f04a538b4ff1828805249a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +36,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -358,7 +357,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -385,7 +384,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -412,7 +411,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -434,13 +433,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 16,
        "text": [
         "u'/Users/chris/Drive/Documents/science/swc/2014-08-21-upenn_examples'"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -459,7 +458,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -486,7 +485,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -513,7 +512,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -541,7 +540,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -560,7 +559,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -588,7 +587,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -616,7 +615,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -649,7 +648,27 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "##Exercise #1\n",
+      "\n",
+      "[http://bit.ly/cjf-swc-git01](http://bit.ly/cjf-swc-git01)"
+     ]
     }
    ],
    "metadata": {}
