--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:9f4287a7e60da67b9719405ffa3850641740d54348fe6a1c0893652736bbc38e"
+  "signature": "sha256:f1b3d3778b1eb6ce3edbff82896f751afcdc3730084e2e8d3d4281f49fe10f77"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,17 +27,7 @@
        "slide_type": "slide"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Automagic is ON, % prefix IS NOT needed for line magics.\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -401,25 +391,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[user]\r\n",
-        "\tname = Chris Friedline\r\n",
-        "\temail = cfriedline@vcu.edu\r\n",
-        "\tsigningkey = 90859AFF\r\n",
-        "[color]\r\n",
-        "\tui = true\r\n",
-        "[push]\r\n",
-        "\tdefault = simple\r\n",
-        "[core]\r\n",
-        "\texcludesfile = /Users/chris/.gitignore\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -437,16 +409,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "mkdir: /Users/chris/science/swc/2014-08-21-upenn_examples: File exists\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -464,16 +427,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "/Users/chris/Drive/Documents/science/swc/2014-08-21-upenn_examples\n"
-       ]
-      }
-     ],
-     "prompt_number": 33
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -491,16 +445,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Initialized empty Git repository in /Users/chris/Drive/Documents/science/swc/2014-08-21-upenn_examples/.git/\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 43
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -518,8 +463,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [],
-     "prompt_number": 44
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -537,17 +481,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "total 8\r\n",
-        "-rw-r--r--  1 chris  staff  9 Aug 21 05:34 example.txt\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 45
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -565,16 +499,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Test me!\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 46
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -592,25 +517,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "On branch master\r\n",
-        "\r\n",
-        "Initial commit\r\n",
-        "\r\n",
-        "Untracked files:\r\n",
-        "  (use \"git add <file>...\" to include in what will be committed)\r\n",
-        "\r\n",
-        "\t\u001b[31mexample.txt\u001b[m\r\n",
-        "\r\n",
-        "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 47
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -628,8 +535,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [],
-     "prompt_number": 48
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -647,24 +553,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "On branch master\r\n",
-        "\r\n",
-        "Initial commit\r\n",
-        "\r\n",
-        "Changes to be committed:\r\n",
-        "  (use \"git rm --cached <file>...\" to unstage)\r\n",
-        "\r\n",
-        "\t\u001b[32mnew file:   example.txt\u001b[m\r\n",
-        "\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 49
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -682,18 +571,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[master (root-commit) 3ea3298] added example\r\n",
-        " 1 file changed, 1 insertion(+)\r\n",
-        " create mode 100644 example.txt\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 50
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -713,20 +591,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u001b[33mcommit 3ea32985d1db95a82893a14c372971e47c3770ca\u001b[m\r\n",
-        "Author: Chris Friedline <cfriedline@vcu.edu>\r\n",
-        "Date:   Thu Aug 21 05:34:40 2014 -0400\r\n",
-        "\r\n",
-        "    added example\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 51
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -805,8 +670,7 @@
        "slide_type": "subslide"
       }
      },
-     "outputs": [],
-     "prompt_number": 53
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -816,17 +680,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "origin\tgit@github.com:cfriedline/2014-08-21-upenn_examples.git (fetch)\r\n",
-        "origin\tgit@github.com:cfriedline/2014-08-21-upenn_examples.git (push)\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 64
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -846,17 +700,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Branch master set up to track remote branch master from origin.\r\n",
-        "Everything up-to-date\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 55
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -866,16 +710,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Everything up-to-date\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 56
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -972,17 +807,127 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 60,
-       "text": [
-        "u'/Users/chris/Drive/Documents/science/swc/2014-08-21-upenn_examples'"
-       ]
-      }
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ls"
      ],
-     "prompt_number": 60
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git branch"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git checkout -b testing"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git branch"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "echo \"Another file\" > testing.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git status"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git add testing.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git status"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git commit -m \"add testing file\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git log"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ls"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "git checkout master"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -1001,7 +946,7 @@
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -1016,17 +961,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "* \u001b[32mmaster\u001b[m\r\n"
+        "* \u001b[32mmaster\u001b[m\r\n",
+        "  testing\u001b[m\r\n"
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git checkout -b testing"
+      "git merge testing"
      ],
      "language": "python",
      "metadata": {},
@@ -1035,152 +981,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Switched to a new branch 'testing'\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 74
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git branch"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "  master\u001b[m\r\n",
-        "* \u001b[32mtesting\u001b[m\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 76
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "echo \"Another file\" > testing.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 78
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git status"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "On branch testing\r\n",
-        "Untracked files:\r\n",
-        "  (use \"git add <file>...\" to include in what will be committed)\r\n",
-        "\r\n",
-        "\t\u001b[31mtesting.txt\u001b[m\r\n",
-        "\r\n",
-        "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 80
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git add testing.txt"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 81
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git status"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "On branch testing\r\n",
-        "Changes to be committed:\r\n",
-        "  (use \"git reset HEAD <file>...\" to unstage)\r\n",
-        "\r\n",
-        "\t\u001b[32mnew file:   testing.txt\u001b[m\r\n",
-        "\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 83
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git commit -m \"add testing file\""
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[testing 4c6c451] add testing file\r\n",
+        "Updating 3ea3298..4c6c451\r\n",
+        "Fast-forward\r\n",
+        " testing.txt | 1 \u001b[32m+\u001b[m\r\n",
         " 1 file changed, 1 insertion(+)\r\n",
         " create mode 100644 testing.txt\r\n"
        ]
       }
      ],
-     "prompt_number": 84
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "git log"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u001b[33mcommit 4c6c4518b64ce52045a9d546dd0349eef858d8f8\u001b[m\r\n",
-        "Author: Chris Friedline <cfriedline@vcu.edu>\r\n",
-        "Date:   Thu Aug 21 06:08:41 2014 -0400\r\n",
-        "\r\n",
-        "    add testing file\r\n",
-        "\r\n",
-        "\u001b[33mcommit 3ea32985d1db95a82893a14c372971e47c3770ca\u001b[m\r\n",
-        "Author: Chris Friedline <cfriedline@vcu.edu>\r\n",
-        "Date:   Thu Aug 21 05:34:40 2014 -0400\r\n",
-        "\r\n",
-        "    added example\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 88
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -1199,13 +1008,13 @@
        ]
       }
      ],
-     "prompt_number": 90
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git checkout master"
+      "git branch -D testing"
      ],
      "language": "python",
      "metadata": {},
@@ -1214,18 +1023,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Already on 'master'\r\n",
-        "Your branch is up-to-date with 'origin/master'.\r\n"
+        "Deleted branch testing (was 4c6c451).\r\n"
        ]
       }
      ],
-     "prompt_number": 92
+     "prompt_number": 98
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ls"
+      "git branch"
      ],
      "language": "python",
      "metadata": {},
@@ -1234,11 +1042,32 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "example.txt\r\n"
+        "* \u001b[32mmaster\u001b[m\r\n"
        ]
       }
      ],
-     "prompt_number": 93
+     "prompt_number": 99
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "##Excercise 4\n",
+      "\n",
+      "Discussion:\n",
+      "\n",
+      "1. How does this fit into the fork vs push models?\n",
+      "1. What are the advantages and disadvantages to using branches?\n",
+      "\n",
+      "Do:\n",
+      "\n",
+      "1. Create a branch in either scenario\n",
+      "1. Merge in some changes"
+     ]
     }
    ],
    "metadata": {}
