examples as sub-slides add licensing and credits

--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -1,8 +1,8 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "gist_id": "2ffc5daba9419d955d76",
   "name": "",
-  "signature": "sha256:f1b3d3778b1eb6ce3edbff82896f751afcdc3730084e2e8d3d4281f49fe10f77"
+  "signature": "sha256:b1b67f735494d04976dced38c8bee3295481f132e177c1c4d81d354aa7257839"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -347,7 +347,7 @@
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "slide_end",
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -368,7 +368,7 @@
        "slide_type": "subslide"
       },
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "subslide"
       }
      },
      "source": [
@@ -586,7 +586,7 @@
        "frag_number": 16,
        "slide_helper": "subslide_end"
       },
-      "slide_helper": "slide_end",
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "-"
       }
@@ -604,7 +604,7 @@
       },
       "slide_helper": "slide_end",
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "subslide"
       }
      },
      "source": [
@@ -679,7 +679,15 @@
       "git remote -v"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -692,10 +700,8 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 16,
-       "slide_helper": "subslide_end"
+       "frag_number": 16
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "-"
       }
@@ -709,7 +715,17 @@
       "git push"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -723,7 +739,7 @@
       },
       "slide_helper": "slide_end",
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "subslide"
       }
      },
      "source": [
@@ -738,6 +754,13 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -756,6 +779,13 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -791,6 +821,13 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -806,7 +843,16 @@
       "pwd"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "outputs": []
     },
     {
@@ -816,7 +862,15 @@
       "ls"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -826,7 +880,15 @@
       "git branch"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -836,7 +898,15 @@
       "git checkout -b testing"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -846,7 +916,15 @@
       "git branch"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -856,7 +934,15 @@
       "echo \"Another file\" > testing.txt"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -866,7 +952,15 @@
       "git status"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -876,7 +970,15 @@
       "git add testing.txt"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -886,7 +988,15 @@
       "git status"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -896,7 +1006,15 @@
       "git commit -m \"add testing file\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -906,7 +1024,15 @@
       "git log"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -916,7 +1042,15 @@
       "ls"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -926,7 +1060,15 @@
       "git checkout master"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": []
     },
     {
@@ -936,17 +1078,16 @@
       "ls"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "example.txt\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 94
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -955,18 +1096,16 @@
       "git branch"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "* \u001b[32mmaster\u001b[m\r\n",
-        "  testing\u001b[m\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 95
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -975,21 +1114,16 @@
       "git merge testing"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Updating 3ea3298..4c6c451\r\n",
-        "Fast-forward\r\n",
-        " testing.txt | 1 \u001b[32m+\u001b[m\r\n",
-        " 1 file changed, 1 insertion(+)\r\n",
-        " create mode 100644 testing.txt\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 96
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -998,17 +1132,16 @@
       "ls"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "example.txt  testing.txt\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 97
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -1017,17 +1150,16 @@
       "git branch -D testing"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Deleted branch testing (was 4c6c451).\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 98
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -1036,21 +1168,29 @@
       "git branch"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "* \u001b[32mmaster\u001b[m\r\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "-"
       }
-     ],
-     "prompt_number": 99
+     },
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -1067,6 +1207,85 @@
       "\n",
       "1. Create a branch in either scenario\n",
       "1. Merge in some changes"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "##Recap\n",
+      "\n",
+      "1. Created a local git repository\n",
+      "1. Added files, made changes, committed\n",
+      "1. Used github for collaboration\n",
+      "1. Checked out (!) branches and merged\n",
+      "1. What's left?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "##Open source (science) and Licensing\n",
+      "\n",
+      "1. Would we care if there was no github?\n",
+      "1. What if someone steals my code, manuscript, etc?\n",
+      "1. How can I control who can do what with my work?\n",
+      "\n",
+      "[http://bit.ly/cjf-swc-git04](http://bit.ly/cjf-swc-git04)\n",
+      "\n",
+      "[http://www.software-carpentry.org/v5/novice/git/04-open.html](http://www.software-carpentry.org/v5/novice/git/04-open.html)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "#Credits\n",
+      "<center>\n",
+      "<img src=https://raw.githubusercontent.com/swcarpentry/bc/gh-pages/img/software-carpentry-banner.png>\n",
+      "<img src=https://upload.wikimedia.org/wikipedia/en/8/8c/VCU_typeface.svg height=50%>\n",
+      "<img src=https://www.nsf.gov/images/logos/nsf1.gif>\n",
+      "</center>\n",
+      "<p>\n",
+      "<center>\n",
+      "[@noituloveand](http://www.twitter.com/noituloveand)<br>\n",
+      "[chris.friedline.net](http://chris.friedline.net)<br>\n",
+      "[Eckert lab](http://eckertlab.blogspot.com)<br>\n",
+      "</center>"
      ]
     }
    ],
