wack the example files, too

--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "gist_id": "2ffc5daba9419d955d76",
   "name": "",
-  "signature": "sha256:b1b67f735494d04976dced38c8bee3295481f132e177c1c4d81d354aa7257839"
+  "signature": "sha256:d74c22e92be2f69b36fb9a9a15b7c39585dd57bf3100ab9688761f01c07c0522"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -433,7 +433,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rm -rf .git && git init"
+      "rm -rf .git && rm -f *.txt && git init"
      ],
      "language": "python",
      "metadata": {
