add blank cell at beginning

--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -1,14 +1,28 @@
 {
  "metadata": {
+  "celltoolbar": "Slideshow",
   "gist_id": "2ffc5daba9419d955d76",
   "name": "",
-  "signature": "sha256:d74c22e92be2f69b36fb9a9a15b7c39585dd57bf3100ab9688761f01c07c0522"
+  "signature": "sha256:6373842ca7aad01b8c2ad72b2214a735e2ba5285999e4485fc650491b7a2a653"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 17
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -24,10 +38,20 @@
       },
       "slide_helper": "slide_end",
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "skip"
       }
      },
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Automagic is ON, % prefix IS NOT needed for line magics.\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
