minor adjustments based on teaching it

--- a/2014-08-21-upenn/git.ipynb
+++ b/2014-08-21-upenn/git.ipynb
@@ -1,28 +1,14 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "gist_id": "2ffc5daba9419d955d76",
   "name": "",
-  "signature": "sha256:6373842ca7aad01b8c2ad72b2214a735e2ba5285999e4485fc650491b7a2a653"
+  "signature": "sha256:41af4bfb9c14dbc72ff0f9c4c2169df4fbe6e60f5ffd75e19e675c09ad1af838"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "skip"
-      }
-     },
-     "outputs": [],
-     "prompt_number": 17
-    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -38,20 +24,10 @@
       },
       "slide_helper": "slide_end",
       "slideshow": {
-       "slide_type": "skip"
+       "slide_type": "slide"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Automagic is ON, % prefix IS NOT needed for line magics.\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -583,7 +559,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git commit -m \"added example\""
+      "git commit -m \"added example.txt\""
      ],
      "language": "python",
      "metadata": {
@@ -607,10 +583,26 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 16,
-       "slide_helper": "subslide_end"
+       "frag_number": 16
       },
-      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ls -a"
+     ],
+     "language": "python",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
       "slideshow": {
        "slide_type": "-"
       }
@@ -819,7 +811,7 @@
       "\n",
       "1. Pick a partner\n",
       "1. One person grant access to the other\n",
-      "1. Clone your partner's repository from github (ssh://)\n",
+      "1. Clone your partner's repository from github (new directory, your credentials)\n",
       "1. Make a change locally and commit\n",
       "1. Push changes up to github\n",
       "\n",
@@ -831,7 +823,7 @@
       "##Exercise #4\n",
       "\n",
       "1. Fork your partner's repository\n",
-      "1. Clone it locally\n",
+      "1. Clone it locally (git clone)\n",
       "1. Make a change\n",
       "1. Submit a pull request to your partner\n",
       "1. Merge that pull request from github\n",
@@ -1220,7 +1212,7 @@
       }
      },
      "source": [
-      "##Excercise 4\n",
+      "##Excercise 5\n",
       "\n",
       "Discussion:\n",
       "\n",
